--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,15 @@
   </head>
 
   <body>
+  <% if current_user.present? %>
+    <div style="position: fixed; top: 10px; right: 1000px;">
+      <%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: 'box-sizing: border-box; font-size: 14px; margin: 0;' %>
+    </div>
+  <% else %>   
+    <%= button_to "Sign Up", new_user_registration_path, method: :post, class: 'box-sizing: border-box; font-size: 14px; margin: 0;' %>
+  <% end %>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     <%= yield %>
-  </body>
-</html>
+</body>
+
