--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,9 +1,8 @@
-<%= form_with model: task do |form| %>
-  
+<%= form_with model:  [ current_user, @task ] do |form| %>
     <div>
       <%= form.label :title %><br>
       <%= form.text_field :title %>
-      <% task.errors.full_messages_for(:title).each do |message| %>
+      <% @task.errors.full_messages_for(:title).each do |message| %>
       <div><%= message %></div>
       <% end %>
     </div>
@@ -11,15 +10,15 @@
     <div>
       <%= form.label :description %><br>
       <%= form.text_area :description %><br>
-      <% task.errors.full_messages_for(:description).each do |message| %>
+      <% @task.errors.full_messages_for(:description).each do |message| %>
         <div><%= message %></div>
       <% end %>
     </div>
 
     <div>
       <%= form.label :deadline %><br>
-      <%= form.text_area :deadline %><br>
-      <% task.errors.full_messages_for(:deadline).each do |message| %>
+      <%= form.date_field :deadline %><br>
+      <% @task.errors.full_messages_for(:deadline).each do |message| %>
         <div><%= message %></div>
       <% end %>
     </div>
