--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,23 +1,25 @@
 <h1>Listing Tasks</h1>
-<%= link_to 'New task', new_task_path %>
-<table>
-  <tr>
-    <th>Title</th>
-    <th>Description</th>
-    <th>Deadline</th>
-    <th colspan="3"></th>
-  </tr>
- 
-  <% @tasks.each do |task| %>
+<%= link_to 'New task', new_user_task_path(current_user) %>
+<% if @tasks.present?%>
+  <table>
     <tr>
-      <td><%= task.title %></td>
-      <td><%= task.description %></td>
-      <td><%= task.deadline %></td>
-      <td><%= link_to 'Show', task_path(task) %></td>
-      <td><%= link_to 'Edit', edit_task_path(task) %></td>
-      <td><%= link_to 'Destroy', article_path(task),
-              method: :delete,
-              data: { confirm: 'Are you sure?' } %></td>
+      <th>Title</th>
+      <th>Description</th>
+      <th>Deadline</th>
+      <th colspan="3"></th>
     </tr>
-  <% end %>
-</table>
+  
+    <% @tasks.each do |task| %>
+      <tr>
+        <td><%= task.title %></td>
+        <td><%= task.description %></td>
+        <td><%= task.deadline %></td>
+        <td><%= link_to 'Show', user_task_path(current_user,task) %></td>
+        <td><%= link_to 'Edit', edit_user_task_path(current_user,task) %></td>
+        <td><%= link_to 'Destroy', user_task_path(current_user,task),
+                method: :delete,
+                data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </table>
+<%end%>
