--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -8,8 +8,8 @@
 </p>
 
 <ul>
-  <li><%= link_to "Edit", edit_task_path(@task) %></li>
-  <li><%= link_to "Destroy", task_path(@task),
+  <li><%= link_to "Edit", edit_user_task_path(current_user,@task) %></li>
+  <li><%= link_to "Destroy", user_task_path(current_user,@task),
                   method: :delete,
                   data: { confirm: "Are you sure?" } %></li>
 </ul>
