--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,11 +1,12 @@
 <h1>Listing Tasks</h1>
-<%= link_to 'New task', new_user_task_path(current_user) %>
+<%= link_to 'New task', new_user_task_path(current_user) %><br>
 <% if @tasks.present?%>
   <table>
     <tr>
       <th>Title</th>
       <th>Description</th>
       <th>Deadline</th>
+      <th>Status</th>
       <th colspan="3"></th>
     </tr>
   
@@ -13,7 +14,8 @@
       <tr>
         <td><%= task.title %></td>
         <td><%= task.description %></td>
-        <td><%= task.deadline %></td>
+        <td><%= task.deadline %></td><br>
+        <td><%= task.status %></td><br>
         <td><%= link_to 'Show', user_task_path(current_user,task) %></td>
         <td><%= link_to 'Edit', edit_user_task_path(current_user,task) %></td>
         <td><%= link_to 'Destroy', user_task_path(current_user,task),
